--- a/src/main/resources/templates/pages/admin/dashboard.html
+++ b/src/main/resources/templates/pages/admin/dashboard.html
@@ -52,17 +52,16 @@
             </div>
         </nav>
     </div>
+</div>
+<main>
+    <h3 class="logged-success">
+        Welcome Admin <u><span sec:authentication="principal.username"></span></u>
+    </h3>
+</main>
 
-
-    <main>
-        <h3 class="logged-success">
-            Welcome Admin <u><span sec:authentication="principal.username"></span></u>
-        </h3>
-    </main>
-
-    <footer class="footer">
-        <p>&copy; 2023 Toan - Vanessza. All rights reserved.</p>
-    </footer>
+<footer class="footer">
+    <p>&copy; 2023 Toan. All rights reserved.</p>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
