--- a/src/main/resources/templates/pages/admin/match/index.html
+++ b/src/main/resources/templates/pages/admin/match/index.html
@@ -52,48 +52,47 @@
       </div>
     </nav>
   </div>
+</div>
+<main>
+  <div class="container my-5">
+    <h3 style="color:red" th:text="${message}"></h3>
+    <h1>Match List</h1>
+    <p>Keep track of your favorite matches. Don't miss out!</p>
+    <a th:href="@{/admin/matches/create}" >Add new match</a>
+    <br/><br/>
+    <table class="table">
+      <thead class="table-light">
+      <tr>
+        <th >ID</th>
+        <th >Date</th>
+        <th >Starting Time</th>
+        <th >Ticket Price($)</th>
+        <th >Type</th>
+        <th ></th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="match : ${matches}">
+        <td th:text="${match.id}"></td>
+        <td th:text="${match.datum}"></td>
+        <td th:text="${match.kezdes}"></td>
+        <td th:text="${match.belepo}"></td>
+        <td th:text="${match.tipus}"></td>
+        <td>
+          <a th:href="@{'/admin/matches/edit/'+ ${match.id}}">Edit</a>&nbsp;&nbsp;&nbsp;
+          <a th:href="@{'/admin/matches/delete/'+ ${match.id}}">Delete</a>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</main>
 
+<footer class="footer">
+  <p>&copy; 2023 Toan. All rights reserved.</p>
+</footer>
 
-  <main>
-    <div class="container my-5">
-      <h3 style="color:red" th:text="${message}"></h3>
-      <h1>Match List</h1>
-      <p>Keep track of your favorite matches. Don't miss out!</p>
-      <a th:href="@{/admin/matches/create}" >Add new match</a>
-      <br/><br/>
-      <table class="table">
-        <thead class="table-light">
-        <tr>
-          <th >ID</th>
-          <th >Date</th>
-          <th >Starting Time</th>
-          <th >Ticket Price($)</th>
-          <th >Type</th>
-          <th ></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="match : ${matches}">
-          <td th:text="${match.id}"></td>
-          <td th:text="${match.datum}"></td>
-          <td th:text="${match.kezdes}"></td>
-          <td th:text="${match.belepo}"></td>
-          <td th:text="${match.tipus}"></td>
-          <td>
-            <a th:href="@{'/admin/matches/edit/'+ ${match.id}}">Edit</a>&nbsp;&nbsp;&nbsp;
-            <a th:href="@{'/admin/matches/delete/'+ ${match.id}}">Delete</a>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-  </main>
-
-  <footer class="footer">
-    <p>&copy; 2023 Toan - Vanessza. All rights reserved.</p>
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
