--- a/src/main/resources/templates/pages/admin/messages/index.html
+++ b/src/main/resources/templates/pages/admin/messages/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<html xmlns:th="http://thymeleaf.org" >
+<html lang="en" xmlns:th="http://thymeleaf.org" >
 <head>
   <meta charset="UTF-8">
   <!--bootstrap-->
@@ -52,21 +51,22 @@
       </div>
     </nav>
   </div>
+</div>
 
-  <main>
-    <div class="container my-5">
-      <h1>Client's Messages List</h1>
-      <p>Client's Message Management!</p>
-      <br/><br/>
-      <div th:utext="${message}"></div>
-    </div>
-  </main>
+<main>
+  <div class="container my-5">
+    <h1>Client's Messages List</h1>
+    <p>Client's Message Management!</p>
+    <br/><br/>
+    <div th:utext="${message}"></div>
+  </div>
+</main>
 
-  <footer class="footer">
-    <p>&copy; 2023 Toan - Vanessza. All rights reserved.</p>
-  </footer>
+<footer class="footer">
+  <p>&copy; 2023 Toan. All rights reserved.</p>
+</footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
