--- a/src/main/resources/templates/pages/contact/form.html
+++ b/src/main/resources/templates/pages/contact/form.html
@@ -66,7 +66,6 @@
             </div>
         </div>
     </nav>
-
 </div>
 
 <main>
@@ -90,15 +89,15 @@
                 <input class="btn btn-secondary" type="reset" value="Reset">
             </form>
 
-            <div class="contact-image">
-                <img th:src="@{/images/contact.png}" alt="Contact image" width="100%">
-            </div>
+<!--            <div class="contact-image">-->
+<!--                <img th:src="@{/images/contact.png}" alt="Contact image" width="100%">-->
+<!--            </div>-->
         </div>
     </div>
 </main>
 
 <footer class="footer">
-    <p>&copy; 2023 Toan - Vanessza. All rights reserved.</p>
+    <p>&copy; 2023 Toan. All rights reserved.</p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
