--- a/src/main/resources/templates/pages/contact/formResult.html
+++ b/src/main/resources/templates/pages/contact/formResult.html
@@ -84,7 +84,7 @@
 </main>
 
 <footer class="footer">
-    <p>&copy; 2023 Toan - Vanessza. All rights reserved.</p>
+    <p>&copy; 2023 Toan. All rights reserved.</p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
